syntax = "proto3";

package chatroom.msgpb;

message RemoveFriendAck {
    bool success = 1;
    string errmsg = 2;
}